# posture_bot

./: .env_placeholder  .gitignore  Cargo.toml  README.md  config_placeholder.json
src/: main.rs
src/service/: commands.rs  config.rs  discord.rs  message.rs  mod.rs  timer.rs
