[package]
name = "posture_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.arm-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
rand = "0.9.0"
serde = "1.0.217"
serde_json = "1.0.138"
timer = "0.2.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
